--- a/Bevut/app/templates/app/app_layout.html
+++ b/Bevut/app/templates/app/app_layout.html
@@ -18,7 +18,7 @@
   </main>
   <footer class="page-footer black-text grey lighten-3" style="margin-top: 70px;">
     <div class="container">
-      <div class="row">
+      <div class="row footer-text">
         <div class="col l6 s12">
           <h5 class="grey-text text-darken-3">Om BeVut-Dig</h5>
           <p class="grey-text text-darken-1">
