--- a/Bevut/app/static/app/content/print.css
+++ b/Bevut/app/static/app/content/print.css
@@ -15,13 +15,16 @@
     .card-panel {
         box-shadow: none;
         margin: 0;
-        padding: 0;
+        padding: 5px;
     }
     .new-page {
         page-break-after: always;
     }
     .number-box {
-        border: 6px solid #333;
+        border: 4px solid #aaa;
+        width: 40px;
+        height: 40px;
+        line-height: 32px;
     }
     .footer-text {
         display: none;
